# CMake-CMocka-Demo

./: CMakeLists.txt  ReadMe.md
includes/: mocked.h  non_mocked.h
src/: main.c  mocked.c  non_mocked.c
test/: mocks.c  test_runner.c
